Modify charset matches